--- a/matcha_front/src/components/styles.module.scss
+++ b/matcha_front/src/components/styles.module.scss
@@ -3,7 +3,7 @@
     @media ((max-width: 670px) ) {
         width: 40px;
     }
-    animation: leaf 7s infinite;
+    animation: leaf 15s infinite;
 }
 
 @keyframes leaf{
@@ -12,14 +12,17 @@
     }
     50%{
         // transform: scale(1.0, 1.0);
-        transform: translate3d(12px, 50%, 3em);
+        transform: translate3d(2px, 10%, 0.2em) rotate(10deg);
     }
     100%{
         transform: scale(0.9, 0.9);
     }
 }
 
-.leaf_font:nth-child(1) {
-    animation-delay: 5s;
+.leaf_top :nth-child(1) {
+    animation-delay: 2s;
+    position: relative;
+    left: 150px;
+    top: 300px;
 }
  
