--- a/matcha_front/src/components/LeafTop.module.scss
+++ b/matcha_front/src/components/LeafTop.module.scss
@@ -1,6 +1,8 @@
 .leaf_front{
-    width: 80px;
+    width: 100px;
     animation: leaf 15s infinite;
+    // max-width: none;
+    // max-height: none;
 }
 
 @keyframes leaf{
@@ -17,20 +19,41 @@
 }
 
 .leaf_top{
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    background-image: url("../images/leaf_front.png");
+    background-repeat: no-repeat;
+    position: fixed;
+    background-attachment: fixed;
+    right: 10px;
+    z-index: -1;
     :nth-child(1) {
         animation-delay: 2s;
-        position: relative;
-        left: 150px;
-        top: 300px;}
+        position: absolute;
+        left: 10px;
+        top: 10px;}
     :nth-child(2) {
-        animation-delay: 2s;
-        position: relative;
-        left: 200px;
-        top: 140px;}
+        animation-delay: 3s;
+        position: absolute;
+        right: 10px;
+        bottom: 10px;}
     :nth-child(3) {
-        animation-delay: 2s;
-        position: relative;
+        animation-delay: 4s;
+        position: absolute;
         left: 150px;
         top: 300px;}
+    :nth-child(4) {
+        animation-delay: 2s;
+        position: absolute;
+        right: 150px;
+        top: 150px;
+    }
+    :nth-child(5) {
+        animation-delay: 1s;
+        position: absolute;
+        right: 200px;
+        top: 400px;
+    }
 }
  
