--- a/matcha_front/src/app/globals.css
+++ b/matcha_front/src/app/globals.css
@@ -31,10 +31,10 @@ body {
   background-color: radial-gradient(#F1EAD070, #C9E6AC50);
 } */
 
-input {
+/* input {
   background: radial-gradient(#F1EAD070, #C9E6AC50) fixed;
   border-radius: 20px;
   height: 50px;
   border: none;
   text-align: center;
-}
+} */
