--- a/matcha_front/src/app/globals.css
+++ b/matcha_front/src/app/globals.css
@@ -8,33 +8,17 @@
   --bg-end: #879973;
   --brown: #403539;
   --green-radial-button: radial-gradient(#F1EAD070, #C9E6AC50);
-  /* background: linear-gradient(var(--bg-start), var(--bg-end)) fixed; */
   font-size: 18px;
   color: #403539;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  background-color: var(--bg-end);
   background: linear-gradient(var(--bg-start), var(--bg-end)) fixed;
-  @media (max-width: 670px) {
-    margin: auto;
-  }
-  /* background-image: url("../images/leafe_down.png"); */
 }
 
-/* button {
-  color: var(--brown);
-  font-size: 18px;
-  border: none;
-  height: 50px;
-  border-radius: 20px;
-  background-color: radial-gradient(#F1EAD070, #C9E6AC50);
-} */
-
-/* input {
-  background: radial-gradient(#F1EAD070, #C9E6AC50) fixed;
-  border-radius: 20px;
-  height: 50px;
-  border: none;
-  text-align: center;
-} */
+input::-webkit-credentials-auto-fill-button,
+input::-webkit-contacts-auto-fill-button {
+  position: absolute;
+  margin-left: 10px
+}
