--- a/matcha_front/src/app/globals.css
+++ b/matcha_front/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "node_modules/ol/ol.css";
+
 :root {
   --foreground: #403539;
   --bg-start: #C9E6AC;
