--- a/matcha_front/src/app/globals.css
+++ b/matcha_front/src/app/globals.css
@@ -14,6 +14,7 @@
 
 body {
   background: url("../../public/leaf_main.svg") center/cover no-repeat fixed, linear-gradient(var(--bg-start), var(--bg-end)) fixed;
+  min-width: 375px;
 }
 
 /* @media(min-width: 500px) {
